Change APP_EXIT to false to prevent restart of the spark cluster

--- a/resources.yaml
+++ b/resources.yaml
@@ -113,7 +113,7 @@ items:
               - name: OSHINKO_DEL_CLUSTER
                 value: ${OSHINKO_DEL_CLUSTER}
               - name: APP_EXIT
-                value: "true"
+                value: "false"
               - name: OSHINKO_NAMED_CONFIG
                 value: ${OSHINKO_NAMED_CONFIG}
               - name: OSHINKO_SPARK_DRIVER_CONFIG
@@ -333,7 +333,7 @@ items:
               - name: OSHINKO_DEL_CLUSTER
                 value: ${OSHINKO_DEL_CLUSTER}
               - name: APP_EXIT
-                value: "true"
+                value: "false"
               - name: OSHINKO_NAMED_CONFIG
                 value: ${OSHINKO_NAMED_CONFIG}
               - name: OSHINKO_SPARK_DRIVER_CONFIG
@@ -533,7 +533,7 @@ items:
               - name: OSHINKO_DEL_CLUSTER
                 value: ${OSHINKO_DEL_CLUSTER}
               - name: APP_EXIT
-                value: "true"
+                value: "false"
               - name: OSHINKO_NAMED_CONFIG
                 value: ${OSHINKO_NAMED_CONFIG}
               - name: OSHINKO_SPARK_DRIVER_CONFIG
